--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pgzero (1.0.2-1) jessie; urgency=low
+
+  * Update to new upstream release
+
+ -- Serge Schneider <serge@raspberrypi.org>  Wed, 10 Jun 2015 17:54:47 +0100
+
 pgzero (1.0.1-1) jessie; urgency=low
 
   * Initial release
