--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pgzero (1.1-1) jessie; urgency=medium
+
+  * Upstream 1.1 release
+
+ -- Serge Schneider <serge@raspberrypi.org>  Wed, 04 Nov 2015 15:24:53 +0000
+
 pgzero (1.0.2-1) jessie; urgency=low
 
   * Update to new upstream release
